# merlionclaw

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  merlionclaw-roadmap.jsx
.github/workflows/: ci.yml
config/: default.toml
docs/: CHAT-PLATFORMS-ROADMAP.md
mclaw/: Cargo.toml
mclaw-agent/: Cargo.toml
mclaw-agent/src/: agent.rs  context.rs  lib.rs
mclaw-agent/src/llm/: anthropic.rs  mod.rs
mclaw-channels/: Cargo.toml
mclaw-channels/src/: discord.rs  lib.rs  slack.rs  teams.rs  telegram.rs  traits.rs  whatsapp.rs
mclaw-gateway/: Cargo.toml
mclaw-gateway/src/: alert.rs  config.rs  lib.rs  protocol.rs  server.rs  session.rs
mclaw-mcp/: Cargo.toml
mclaw-mcp/src/: bridge.rs  client.rs  lib.rs  manager.rs  protocol.rs  transport.rs
mclaw-memory/: Cargo.toml
mclaw-memory/src/: lib.rs  search.rs  store.rs
mclaw-permissions/: Cargo.toml
mclaw-permissions/src/: capability.rs  lib.rs  policy.rs
mclaw-skills/: Cargo.toml
mclaw-skills/src/: helm.rs  incident.rs  istio.rs  k8s.rs  lib.rs  loki.rs  memory.rs  parser.rs  registry.rs
mclaw-wasm/: Cargo.toml
mclaw-wasm/src/: lib.rs  runtime.rs
mclaw/src/: main.rs  tui.rs
skills/helm/: SKILL.md
skills/incident/: SKILL.md
skills/istio/: SKILL.md
skills/k8s/: SKILL.md
skills/loki/: SKILL.md
skills/memory/: SKILL.md
tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md
