[workspace]
resolver = "2"
members = [
    "mclaw",
    "mclaw-gateway",
    "mclaw-agent",
    "mclaw-skills",
    "mclaw-channels",
    "mclaw-memory",
    "mclaw-permissions",
    "mclaw-wasm",
    "mclaw-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/merlionclaw/merlionclaw"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
