[package]
name = "mclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures-core.workspace = true
pin-project-lite = "0.2"
bytes = "1"
