[package]
name = "mclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["telegram", "slack"]
telegram = ["teloxide"]
slack = ["reqwest"]

[dependencies]
mclaw-gateway = { path = "../mclaw-gateway" }
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures-core.workspace = true
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
teloxide = { version = "0.13", features = ["macros"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
