[package]
name = "mclaw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mclaw-agent = { path = "../mclaw-agent" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait = "0.1"
