[package]
name = "mclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
