[package]
name = "mclaw-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["k8s"]
k8s = ["kube", "k8s-openapi"]

[dependencies]
mclaw-agent = { path = "../mclaw-agent" }
mclaw-memory = { path = "../mclaw-memory" }
mclaw-permissions = { path = "../mclaw-permissions" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
tokio.workspace = true
indexmap = { version = "2", features = ["serde"] }
chrono.workspace = true
reqwest.workspace = true
kube = { version = "0.98", features = ["client", "runtime"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_32"], optional = true }
