[package]
name = "mclaw-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mclaw-agent = { path = "../mclaw-agent" }
mclaw-permissions = { path = "../mclaw-permissions" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait = "0.1"
wasmtime = "29"
wasmtime-wasi = "29"
