[package]
name = "mclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mclaw"
path = "src/main.rs"

[dependencies]
mclaw-gateway = { path = "../mclaw-gateway" }
mclaw-agent = { path = "../mclaw-agent" }
mclaw-skills = { path = "../mclaw-skills" }
mclaw-channels = { path = "../mclaw-channels" }
mclaw-memory = { path = "../mclaw-memory" }
mclaw-permissions = { path = "../mclaw-permissions" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
shellexpand = "3"
tokio-util = { version = "0.7", features = ["rt"] }
serde.workspace = true
toml.workspace = true
